--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -1,39 +1,25 @@
-@charset 'utf-8';
-/*这些元素都建议重新初始化*/
-body,div,dl,dt,dd,ul,ol,li,tr,td,th,
-h1,h2,h3,h4,h5,h6,hr,br,img,table,
-input,form,a,p,textarea{
-    padding:0;
-    margin:0;
-    font-family:Arial,'Microsoft YaHei','宋体';
-}
-/*去掉列表默认排列*/
-ul,ol,li{
-    list-style:none;
-}
-/*去掉底部横线*/
-/*把a元素更改设置成块级元素，这个根据实际情况决定要不要*/
-a{
-    text-decoration:none;
-    display:block;
-    color: aquamarine;
-}
-/*img标签要清除border。*/
-/*display设为block设置为块级元素，默认为display:inline;
-存在下边线多出4px状况,所以一般设为block*/
-img{
-    border:0;
-    display:block;
-}
-/*清除浮动破坏带来的塌陷问题*/
-/*清除浮动的兼容IE*/
-.clearfloat {
-	zoom: 1;
-}
-.clearfloat:after {
-	display:block;
-	clear:both;
-	content:"";
-	visibility:hidden;
-	height:0;
-}
+@charset "utf-8";html{background-color:#fff;color:#000;font-size:12px}
+body,ul,ol,dl,dd,h1,h2,h3,h4,h5,h6,figure,form,fieldset,legend,input,textarea,button,p,blockquote,th,td,pre,xmp{margin:0;padding:0}
+body,input,textarea,button,select,pre,xmp,tt,code,kbd,samp{line-height:1.5;font-family:tahoma,arial,"Hiragino Sans GB",simsun,sans-serif}
+h1,h2,h3,h4,h5,h6,small,big,input,textarea,button,select{font-size:100%}
+h1,h2,h3,h4,h5,h6{font-family:tahoma,arial,"Hiragino Sans GB","微软雅黑",simsun,sans-serif}
+h1,h2,h3,h4,h5,h6,b,strong{font-weight:normal}
+address,cite,dfn,em,i,optgroup,var{font-style:normal}
+table{border-collapse:collapse;border-spacing:0;text-align:left}
+caption,th{text-align:inherit}
+ul,ol,menu{list-style:none}
+fieldset,img{border:0}
+img,object,input,textarea,button,select{vertical-align:middle}
+article,aside,footer,header,section,nav,figure,figcaption,hgroup,details,menu{display:block}
+audio,canvas,video{display:inline-block;*display:inline;*zoom:1}
+blockquote:before,blockquote:after,q:before,q:after{content:"\0020"}
+textarea{overflow:auto;resize:vertical}
+input,textarea,button,select,a{outline:0 none;border: none;}
+button::-moz-focus-inner,input::-moz-focus-inner{padding:0;border:0}
+mark{background-color:transparent}
+a,ins,s,u,del{text-decoration:none}
+sup,sub{vertical-align:baseline}
+html {overflow-x: hidden;height: 100%;font-size: 50px;-webkit-tap-highlight-color: transparent;}
+body {font-family: Arial, "Microsoft Yahei", "Helvetica Neue", Helvetica, sans-serif;color: #333;font-size: .28em;line-height: 1;-webkit-text-size-adjust: none;}
+hr {height: .02rem;margin: .1rem 0;border: medium none;border-top: .02rem solid #cacaca;}
+a {color: #25a4bb;text-decoration: none;}
